修复了一些bug

--- a/pages/main.html
+++ b/pages/main.html
@@ -250,7 +250,7 @@
             location.href = "./yiyan.html";
         })
         $("#testpage").click(function () {
-            location.href = "https://changyan.work/test/";
+            location.href = "./test.html";
         })
 
         $(window).scroll(upd);
