完善切分支功能

--- a/pages/main.html
+++ b/pages/main.html
@@ -23,7 +23,7 @@
             id="testpage"><i class="fa fa-code" aria-hidden="true"></i> 测试页</button>
         </div>
         <div class="mb-1">
-            <button id="update"><i class="fa fa-arrow-up" aria-hidden="true"></i> 更新软件</button>
+            <button id="changeMode"><i class="fa fa-exchange" aria-hidden="true"></i> 切换分支</button>
         </div>
         <div class="mb-1">
             <button id="refresh">刷新页面</button> <button id="upda">刷新屏幕</button> <button id="getInfo">设备信息</button>
@@ -255,8 +255,8 @@
         $("#testpage").click(function () {
             location.href = "./test.html";
         })
-        $("#update").click(function () {
-            location.href = "./update.html";
+        $("#changeMode").click(function () {
+            location.href = "./changeMode.html";
         })
 
         $(window).scroll(upd);
