--- a/pages/main.html
+++ b/pages/main.html
@@ -23,7 +23,7 @@
             id="testpage"><i class="fa fa-code" aria-hidden="true"></i> 测试页</button>
         </div>
         <div class="mb-1">
-            <button id="changeMode"><i class="fa fa-exchange" aria-hidden="true"></i> 切换分支</button>
+            <button id="update"><i class="fa fa-arrow-up" aria-hidden="true"></i> 软件更新</button> <button id="changeMode"><i class="fa fa-exchange" aria-hidden="true"></i> 切换分支</button>
         </div>
         <div class="mb-1">
             <button id="refresh">刷新页面</button> <button id="upda">刷新屏幕</button> <button id="getInfo">设备信息</button>
@@ -257,6 +257,9 @@
         })
         $("#changeMode").click(function () {
             location.href = "./changeMode.html";
+        })
+        $("#update").click(function(){
+            location.href = "./update.html";
         })
 
         $(window).scroll(upd);
