--- a/pages/changeMode.html
+++ b/pages/changeMode.html
@@ -35,7 +35,7 @@
             两者的区别是：<br>
             web分支（也就是当前分支）使用python和html开发，基于Google Chromium，开发非常方便，但启动慢，而且性能开销高。<br>
             master分支全部采用python开发，更流畅，但开发成本略高。<br>
-            注意：点击切换分支后，将撤销本分支的全部更改（即运行：git checkout master）
+            注意：点击切换分支后，将撤销本分支的全部更改（即运行：git checkout .）
         </p>
         <div class="text-center">
             <button id="checkout">切换为master分支</button>
