--- a/pages/main.html
+++ b/pages/main.html
@@ -23,6 +23,9 @@
             id="testpage"><i class="fa fa-code" aria-hidden="true"></i> 测试页</button>
         </div>
         <div class="mb-1">
+            <button id="calc"><i class="fa fa-calculator" aria-hidden="true"></i> 计算器</button>
+        </div>
+        <div class="mb-1">
             <button id="update"><i class="fa fa-arrow-up" aria-hidden="true"></i> 软件更新</button> <button id="changeMode"><i class="fa fa-exchange" aria-hidden="true"></i> 切换分支</button>
         </div>
         <div class="mb-1">
@@ -260,6 +263,9 @@
         })
         $("#update").click(function(){
             location.href = "./update.html";
+        })
+        $("#calc").click(function(){
+            location.href = "./calc.html";
         })
 
         $(window).scroll(upd);
