--- a/pages/main.html
+++ b/pages/main.html
@@ -28,6 +28,10 @@
             <button id="random"><i class="fa fa-random" aria-hidden="true"></i> 随机数生成器</button>
         </div>
         <div class="mb-1">
+            <button id="note"><i class="fa fa-file" aria-hidden="true"></i> 记事本</button>
+
+        </div>
+        <div class="mb-1">
             <button id="update"><i class="fa fa-arrow-up" aria-hidden="true"></i> 软件更新</button>
             <button id="changeMode"><i class="fa fa-exchange" aria-hidden="true"></i> 切换分支</button>
         </div>
@@ -276,6 +280,9 @@
         })
         $("#random").click(function(){
             location.href = "./random.html";
+        })
+        $("#note").click(function(){
+            location.href = "./note.html";
         })
 
         $(window).scroll(upd);
